output.txt
Traceback (most recent call last):
  File "C:\Python27\lib\site-packages\wx-3.0-msw\wx\_core.py", line 16766, in <lambda>
    lambda event: event.callable(*event.args, **event.kw) )
  File "Cura\gui\splashScreen.py", line 15, in DoCallback
    self.callback()
  File "Cura\gui\app.py", line 99, in afterSplashCallback
    from Cura.gui import mainWindow
  File "Cura\gui\mainWindow.py", line 1177
    try:
       ^
IndentationError: unindent does not match any outer indentation level
Config_Adv Reload from XML file
Listening for engine communications on 49674
self._platformMesh[machine]._matrix [[ -1.00000000e+00  -1.23259516e-32  -1.22464680e-16]
 [ -1.22464680e-16   1.38777878e-16   1.00000000e+00]
 [  0.00000000e+00   1.00000000e+00  -1.38777878e-16]]
Closing down
Config_Adv Reload from XML file
Listening for engine communications on 49674
self._platformMesh[machine]._matrix [[ -1.00000000e+00  -1.23259516e-32  -1.22464680e-16]
 [ -1.22464680e-16   1.38777878e-16   1.00000000e+00]
 [  0.00000000e+00   1.00000000e+00  -1.38777878e-16]]
Traceback (most recent call last):
  File "Cura\gui\mainWindow.py", line 1288, in EVT_Offset
    self.Refresh_Offset()
  File "Cura\gui\mainWindow.py", line 1213, in Refresh_Offset
    self.offset_ctrl.setValue(profile.getProfileSetting('offset_input'))
AttributeError: 'TextCtrl' object has no attribute 'setValue'
Traceback (most recent call last):
  File "Cura\gui\mainWindow.py", line 1288, in EVT_Offset
    self.Refresh_Offset()
  File "Cura\gui\mainWindow.py", line 1213, in Refresh_Offset
    self.offset_ctrl.setValue(profile.getProfileSetting('offset_input'))
AttributeError: 'TextCtrl' object has no attribute 'setValue'
Traceback (most recent call last):
  File "Cura\gui\mainWindow.py", line 1288, in EVT_Offset
    self.Refresh_Offset()
  File "Cura\gui\mainWindow.py", line 1213, in Refresh_Offset
    self.offset_ctrl.setValue(profile.getProfileSetting('offset_input'))
AttributeError: 'TextCtrl' object has no attribute 'setValue'
Closing down
Config_Adv Reload from XML file
Listening for engine communications on 49674
self._platformMesh[machine]._matrix [[ -1.00000000e+00  -1.23259516e-32  -1.22464680e-16]
 [ -1.22464680e-16   1.38777878e-16   1.00000000e+00]
 [  0.00000000e+00   1.00000000e+00  -1.38777878e-16]]
Closing down
Config_Adv Reload from XML file
Listening for engine communications on 49674
self._platformMesh[machine]._matrix [[ -1.00000000e+00  -1.23259516e-32  -1.22464680e-16]
 [ -1.22464680e-16   1.38777878e-16   1.00000000e+00]
 [  0.00000000e+00   1.00000000e+00  -1.38777878e-16]]
Closing down
Config_Adv Reload from XML file
Listening for engine communications on 49674
self._platformMesh[machine]._matrix [[ -1.00000000e+00  -1.23259516e-32  -1.22464680e-16]
 [ -1.22464680e-16   1.38777878e-16   1.00000000e+00]
 [  0.00000000e+00   1.00000000e+00  -1.38777878e-16]]
Closing down
Config_Adv Reload from XML file
Failed to listen on port: 49674
Listening for engine communications on 49675
self._platformMesh[machine]._matrix [[ -1.00000000e+00  -1.23259516e-32  -1.22464680e-16]
 [ -1.22464680e-16   1.38777878e-16   1.00000000e+00]
 [  0.00000000e+00   1.00000000e+00  -1.38777878e-16]]
Closing down
Config_Adv Reload from XML file
Failed to listen on port: 49674
Listening for engine communications on 49675
self._platformMesh[machine]._matrix [[ -1.00000000e+00  -1.23259516e-32  -1.22464680e-16]
 [ -1.22464680e-16   1.38777878e-16   1.00000000e+00]
 [  0.00000000e+00   1.00000000e+00  -1.38777878e-16]]
Closing down
Config_Adv Reload from XML file
Failed to listen on port: 49674
Listening for engine communications on 49675
self._platformMesh[machine]._matrix [[ -1.00000000e+00  -1.23259516e-32  -1.22464680e-16]
 [ -1.22464680e-16   1.38777878e-16   1.00000000e+00]
 [  0.00000000e+00   1.00000000e+00  -1.38777878e-16]]
Closing down
Config_Adv Reload from XML file
Failed to listen on port: 49674
Listening for engine communications on 49675
self._platformMesh[machine]._matrix [[ -1.00000000e+00  -1.23259516e-32  -1.22464680e-16]
 [ -1.22464680e-16   1.38777878e-16   1.00000000e+00]
 [  0.00000000e+00   1.00000000e+00  -1.38777878e-16]]
Closing down
Config_Adv Reload from XML file
Listening for engine communications on 49674
self._platformMesh[machine]._matrix [[ -1.00000000e+00  -1.23259516e-32  -1.22464680e-16]
 [ -1.22464680e-16   1.38777878e-16   1.00000000e+00]
 [  0.00000000e+00   1.00000000e+00  -1.38777878e-16]]
Closing down
Config_Adv Reload from XML file
Listening for engine communications on 49674
self._platformMesh[machine]._matrix [[ -1.00000000e+00  -1.23259516e-32  -1.22464680e-16]
 [ -1.22464680e-16   1.38777878e-16   1.00000000e+00]
 [  0.00000000e+00   1.00000000e+00  -1.38777878e-16]]
Closing down
Config_Adv Reload from XML file
Listening for engine communications on 49674
self._platformMesh[machine]._matrix [[ -1.00000000e+00  -1.23259516e-32  -1.22464680e-16]
 [ -1.22464680e-16   1.38777878e-16   1.00000000e+00]
 [  0.00000000e+00   1.00000000e+00  -1.38777878e-16]]
Closing down
Config_Adv Reload from XML file
Listening for engine communications on 49674
self._platformMesh[machine]._matrix [[ -1.00000000e+00  -1.23259516e-32  -1.22464680e-16]
 [ -1.22464680e-16   1.38777878e-16   1.00000000e+00]
 [  0.00000000e+00   1.00000000e+00  -1.38777878e-16]]
Closing down
Config_Adv Reload from XML file
Listening for engine communications on 49674
self._platformMesh[machine]._matrix [[ -1.00000000e+00  -1.23259516e-32  -1.22464680e-16]
 [ -1.22464680e-16   1.38777878e-16   1.00000000e+00]
 [  0.00000000e+00   1.00000000e+00  -1.38777878e-16]]
Closing down
Config_Adv Reload from XML file
Listening for engine communications on 49674
self._platformMesh[machine]._matrix [[ -1.00000000e+00  -1.23259516e-32  -1.22464680e-16]
 [ -1.22464680e-16   1.38777878e-16   1.00000000e+00]
 [  0.00000000e+00   1.00000000e+00  -1.38777878e-16]]
Closing down
Config_Adv Reload from XML file
Listening for engine communications on 49674
self._platformMesh[machine]._matrix [[ -1.00000000e+00  -1.23259516e-32  -1.22464680e-16]
 [ -1.22464680e-16   1.38777878e-16   1.00000000e+00]
 [  0.00000000e+00   1.00000000e+00  -1.38777878e-16]]
Closing down
Config_Adv Reload from XML file
Listening for engine communications on 49674
self._platformMesh[machine]._matrix [[ -1.00000000e+00  -1.23259516e-32  -1.22464680e-16]
 [ -1.22464680e-16   1.38777878e-16   1.00000000e+00]
 [  0.00000000e+00   1.00000000e+00  -1.38777878e-16]]
Closing down
Config_Adv Reload from XML file
Listening for engine communications on 49674
self._platformMesh[machine]._matrix [[ -1.00000000e+00  -1.23259516e-32  -1.22464680e-16]
 [ -1.22464680e-16   1.38777878e-16   1.00000000e+00]
 [  0.00000000e+00   1.00000000e+00  -1.38777878e-16]]
Closing down
